# HelloGN

./: .gitignore  .gitmodules  README.md
BuildStaticCPPLib-Android/: .gitignore  BUILD.gn  build_android.sh  hello_world.hpp
BuildStaticCPPLib-Android/android_out/x64/: .ninja_deps  .ninja_log  args.gn  build.ninja  build.ninja.d  libhello_android_shared_library_cpp.so.rsp  toolchain.ninja
BuildStaticCPPLib-iOS/: .gn  BUILD.gn  build_ios.sh  hello_world.hpp  hello_world_impl.cpp
BuildStaticCPPLib-iOS-deprecated/: BUILD.gn  build_ios.sh
BuildStaticCPPLib-iOS-simple/: BUILD.gn  build_ios.sh
HelloNinja/01_simple_syntax/: .ninja_log  foo.c
HelloNinja/02_syntax_phony_alias/: .ninja_log  build.ninja
HelloNinja/02_syntax_phony_dummy_target/: .ninja_log  build.ninja
HelloNinja/03_syntax_default_target/: .ninja_log  build.ninja
HelloWorld/: BUILD.gn  main.cpp
UseBothStaticDynamicCLib/: BUILD.gn  hello.cc  hello_world_impl.cpp
UseGNBuildTest/: BUILD.gn  build
UseStaticCPPLib/: BUILD.gn
UseStaticCPPLib-iOS/: .gn  build_ios.sh
